Wed May  3 09:29:17 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* expr.c (expand_expr, case COMPONENT_REF): Don't check for checking
	memory usage if not in a function.
	* varasm.c (initializer_constant_valid_p, case ADDR_EXPR): Only
	return address if static.

Wed May  3 13:14:49 MET DST 2000  Jan Hubicka  <jh@suse.cz>

	* ifcvt.c (noce_try_cmove_arith):  Use may_trap_p to thest
	whether address may trap.

Tue May  2 23:38:37 2000  Jason Eckhardt  <jle@cygnus.com>

        * bb-reorder (chain_reorder_blocks): Changed code to test for
        EDGE_FALLTHRU rather than making erroneous assumption that the
        first outgoing edge is the fall-through edge.

Tue May  2 18:20:31 2000  Donald Lindsay  <dlindsay@hound.cygnus.com>

	* config/mips/mips.c (mips_build_va_list,mips_va_start,mips_va_arg): new 
	ABI for varargs, across all MIPS. This is incompatible because the
	va_list (__builtin_va_list) structure is different, so a compilation
	unit passing a va_list and a compilation unit being passed one, should
	both be compiled with the same ABI. (The old structure had two 
	pointers, now it has three.)

Tue May  2 19:18:43 2000  Jason Eckhardt  <jle@cygnus.com>

        * bb-reorder.c (struct reorder_block_def): Remove members end,
        block_begin, and block_end.
        (REORDER_BLOCK_OLD_END): Delete.
        (REORDER_BLOCK_BEGIN): Delete.
        (REORDER_BLOCK_END): Delete.
        (chain_reorder_blocks): Remove dead code.

Tue May  2 17:06:53 2000  Jason Eckhardt  <jle@cygnus.com>

	* bb-reorder.c (remove_scope_notes): Check for both types of scope
	notes as the end of a basic block before deleting.

2000-05-02  Mumit Khan  <khan@xraylith.wisc.edu>

	* final.c (final_start_function): Fix spelling of "necessary".

2000-05-02  Jason Merrill  <jason@casey.cygnus.com>

	* Makefile.in (WARN_CFLAGS): Add -pedantic -Wno-long-long.
	(LOOSE_CFLAGS): New: CFLAGS without -pedantic and -Wtraditional.
	(GCC_CFLAGS): Use it.